--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author"content="Maikel Mercado" >
+    <meta name="descripcion"content="html, css, bootstrap, jquery" >
     <title>Desafio-Ricomida</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,700&display=swap" rel="stylesheet">
@@ -57,7 +59,7 @@
                    <button id="enviarCorreo" class="btn btn-outline-dark  mb-2 m-2" data-bs-toggle="tooltip" data-bs-placement="bottom"
                    title="Presiona para enviar tu correo">Enviar correo
                   </button>
-                  <button type="button" class="btn btn-outline-dark   mb-2 m-2">Añadir a favoritos
+                  <button type="button" class="btn btn-outline-dark   mb-2 m-2" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title=" Agrega esta receta a tus favoritos">Añadir a favoritos
                   </button> 
                 </div>
               </div>
@@ -115,11 +117,10 @@
       <section>
         <div class="container text-center p-5">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 text-center">
               <h4>INGREDIENTES </h4> <br>
               <h5 class="masa">Masa </h5> 
                 <p class="p-2 mt-6">
-                      
                       20 gr de levadura seca instantánea <br>
                       1 cucharadita de azúcar <br>
                       500 ml agua tibia <br>
@@ -207,15 +208,11 @@
           <h2 class="ricacomida ms-2 link-light text-center ">Ricacomida</h2>
         </div>
     </footer>
-
       <script src="https://code.jquery.com/jquery-3.6.0.js" 
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
       <script src="assets/js/script.js"></script>
- 
-    
-
     </body>
-</html>
+</html> 
