--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
       <footer>
         <div class="bg-dark p-5 ">
-          <h2 class="ricacomida ms-2 link-light text-center ">Rigit comida</h2>
+          <h2 class="ricacomida ms-2 link-light text-center ">Ricomida</h2>
         </div>
     </footer>
       <script src="https://code.jquery.com/jquery-3.6.0.js" 
